--- a/html/add-task.html
+++ b/html/add-task.html
@@ -43,7 +43,7 @@
                       </div>
                       <div id="assign-options" class="assign-options d-none" onclick="event.stopPropagation()"></div>
                     </div>
-                    
+                    <div id="initials-container" class="initials-container"></div>
                   </div>
                 </div>
 
