--- a/html/help.html
+++ b/html/help.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <link rel="shortcut icon" href="../assets/img/join-logo.svg" type="image/x-icon" />
     <title>Join | Help</title>
-
     <link rel="stylesheet" href="../../style.css" />
     <script src="../script.js"></script>
     <script src="../../js/render.js"></script>
@@ -18,7 +16,7 @@
       </aside>
       <div class="main-content">
         <header id="header-content" class="header"></header>
-        <main class="main">
+        <main class="main help-main">
           <div class="title">
             <h1>Help</h1>
             <button><img src="../assets/img/arrow-left.svg" alt="" /></button>
