--- a/html/help.html
+++ b/html/help.html
@@ -10,7 +10,7 @@
     <script src="../../js/render.js"></script>
   </head>
   <body onload='init()'>
-    <div class="container">
+    <div class="container help-container">
       <aside>
         <div id="menu-content" class="menu-content"></div>
       </aside>
