--- a/html/summary.html
+++ b/html/summary.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../../styles/summery.css" />
     <script src="../script.js"></script>
     <script src="../js/summary.js" defer></script>
+    <script src="../js/log-in.js" defer></script>
     <script src="../../js/render.js"></script>
   </head>
   <body onload='loadSummary("summary", "menu")'>
