--- a/html/join.html
+++ b/html/join.html
@@ -3,9 +3,65 @@
  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Join-Login</title>
+    <link rel="shortcut icon" href="../assets/img/join-logo.svg" type="image/x-icon"/>
+    <script src="../js/log-in.js" defer></script>
+    <script src="../js/summary.js" defer></script>
+    <link rel="stylesheet" href="../styles/log-in.css">
+    <title>Join | Log in</title>
  </head>
  <body>
-    
+   <main class="log-in-main">
+
+      <div class="header-log-in">
+         <h2>Not a Join user?</h2>
+         <a href="../html/sign-up.html"><button class="btn-log-in">Sign up</button></a>
+      </div>
+
+      <div class="join-img">  
+         <img src="../assets/img/login.svg">
+      </div>
+
+      <div class="container-log-in">
+         <div class="login-title">
+            <h1>Log in</h1>
+            <img src="../assets/img/vector-log-in.svg" alt=""/>
+         </div>
+
+         <section class="input-box">
+            <div class="input-log-in">
+               <input class="input-field" id="emailInput" type="email" name="email" placeholder="Email" required/>
+               <img src="../assets/img/mail-form-icon.svg" alt=""/>
+            </div>
+            <div id="emailError" class="error-message error-email"></div>
+
+            <div class="input-log-in">
+               <input class="input-field" id="passwordInput" type="password" placeholder="Password">
+               <img src="../assets/img/password-log-in.svg" alt=""/>
+            </div>
+            <div id="passwordError" class="error-message"></div>
+         </section>
+            <div id="generalError" class="error-message"></div>
+
+         <section class="remember-forgot-box">
+            <div class="remember-me">
+               <input type="checkbox" name="remember-me" id="remember-me" class="remember-me-input">
+               <label for="remember-me">
+                  <h5>Remember me</h5>
+               </label>
+            </div>
+         </section>
+
+
+         <section class="section-log-in">
+            <button class="button-log-in" id="loginButton">Log in</button>
+            <a href="summary.html"><button class="guest-button" id="guestButton">Guest Log in</button></a>
+         </section>
+      </div>
+
+      <div class="footer">
+         <a href="privacy-policy.html"><p>Privacy Policy</p></a>
+         <a href="legal-notice.html"><p>Legal notice</p></a>
+      </div>
+   </main>
  </body>
  </html>
