createTask toDO implemented

--- a/html/board.html
+++ b/html/board.html
@@ -18,6 +18,7 @@
     <script src="../js/board.js"></script>
     <script src="../js/render.js"></script>
     <script src="../js/templates.js"></script>
+    <script src="../js/add-task.js"></script>
   </head>
   <body onload='loadBoard("board", "menu")'>
     <div class="container">
