--- a/html/contacts.html
+++ b/html/contacts.html
@@ -17,7 +17,7 @@
     <script src="../js/contacts.js"></script>
     <script src="../js/render.js"></script>
   </head>
- <body onload='init("contacts", "menu")'>
+ <body onload='initContacts("contacts", "menu")'>
     <div id="overlay-placeholder"></div>
     <div class="container">
       <aside>
