--- a/html/join.html
+++ b/html/join.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../assets/img/join-logo.svg" type="image/x-icon"/>
     <script src="../js/log-in.js" defer></script>
+    <script src="../js/sign-up.js" defer></script>
     <script src="../js/summary.js" defer></script>
     <link rel="stylesheet" href="../styles/log-in.css">
     <title>Join | Log in</title>
@@ -36,7 +37,7 @@
 
             <div class="input-log-in">
                <input class="input-field" id="passwordInput" type="password" placeholder="Password">
-               <img src="../assets/img/password-log-in.svg" alt=""/>
+               <img src="../assets/img/password-log-in.svg" class="password-img" id="checkInPassword" alt=""/>
             </div>
             <div id="passwordError" class="error-message"></div>
          </section>
