--- a/html/summary.html
+++ b/html/summary.html
@@ -3,15 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="shortcut icon"
-      href="../assets/img/join-logo.svg"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="../assets/img/join-logo.svg" type="image/x-icon"/>
     <title>Join | Summary</title>
     <link rel="stylesheet" href="../../style.css" />
     <link rel="stylesheet" href="../../styles/summery.css" />
     <script src="../script.js"></script>
+    <script src="../js/sign-up.js" defer></script>
     <script src="../js/summary.js" defer></script>
     <script src="../js/log-in.js" defer></script>
     <script src="../../js/render.js"></script>
