button user menu

--- a/html/join.html
+++ b/html/join.html
@@ -7,6 +7,7 @@
     <script src="../js/log-in.js" defer></script>
     <script src="../js/sign-up.js" defer></script>
     <script src="../js/summary.js" defer></script>
+    <script src="../script.js" defer></script>
     <link rel="stylesheet" href="../styles/log-in.css">
     <title>Join | Log in</title>
  </head>
