--- a/html/summary.html
+++ b/html/summary.html
@@ -7,7 +7,7 @@
     <title>Join | Summary</title>
     <link rel="stylesheet" href="../../style.css" />
     <link rel="stylesheet" href="../../styles/summery.css" />
-    <script src="../script.js"></script>
+    <script src="../script.js" defer></script>
     <script src="../js/sign-up.js" defer></script>
     <script src="../js/summary.js" defer></script>
     <script src="../js/log-in.js" defer></script>
