task added animation hidden

--- a/html/add-task.html
+++ b/html/add-task.html
@@ -22,7 +22,7 @@
       </aside>
       <div class="main-content">
         <header id="header-content" class="header"></header>
-        <main id="main-add-task" class="main">
+        <main id="main-add-task" class="main main-add-task">
           <!-- Hier den Inhalt der Seite einfügen! -->
           
           
