--- a/html/summary.html
+++ b/html/summary.html
@@ -120,7 +120,7 @@
               </a>
             </div>
           </div>
-          <div class="greet" id="greeting"></div>
+          <div id="greeting" class="greet"></div>
         </main>
       </div>
     </div>
