--- a/html/join.html
+++ b/html/join.html
@@ -38,7 +38,7 @@
 
             <div class="input-log-in">
                <input class="input-field" id="passwordInput" type="password" placeholder="Password">
-               <img src="../assets/img/password-log-in.svg" class="password-img" id="checkInPassword" alt=""/>
+               <img src="../assets/img/password-log-in.svg" class="password-img" id="checkInPassword" onclick="checkPasswordImage()" alt=""/>
             </div>
             <div id="passwordError" class="error-message"></div>
          </section>
@@ -55,8 +55,8 @@
 
 
          <section class="section-log-in">
-            <button class="button-log-in" id="loginButton">Log in</button>
-            <a href="summary.html"><button class="guest-button" id="guestButton">Guest Log in</button></a>
+            <button class="button-log-in" id="loginButton" onclick="logIn()">Log in</button>
+            <a href="summary.html"><button class="guest-button" id="guestButton" onclick="buttonGuest()">Guest Log in</button></a>
          </section>
       </div>
 
