worked on login

--- a/html/join.html
+++ b/html/join.html
@@ -61,8 +61,8 @@
       </div>
 
       <div class="footer">
-         <a href="privacy-policy.html"><p>Privacy Policy</p></a>
-         <a href="legal-notice.html"><p>Legal notice</p></a>
+         <p onclick="loadInfoSites('privacy-policy.html')">Privacy Policy</p>
+         <p onclick="loadInfoSites('legal-notice.html')">Legal notice</p>
       </div>
    </main>
  </body>
