--- a/html/sign-up.html
+++ b/html/sign-up.html
@@ -1,74 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../assets/img/join-logo.svg" type="image/x-icon"/>
-    <link rel="stylesheet" href="../styles/sign-up.css">
-    <link rel="stylesheet" href="../styles/log-in.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="../assets/img/join-logo.svg"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="../styles/sign-up.css" />
+    <link rel="stylesheet" href="../styles/log-in.css" />
     <script src="../js/sign-up.js" defer></script>
     <script src="../js/summary.js" defer></script>
     <script src="../js/log-in.js" defer></script>
     <title>Join | Sign up</title>
-</head>
-<body>
+  </head>
+  <body>
     <main class="log-in-main">
-         <div class="join-img">  
-           <img src="../assets/img/login.svg">
-        </div>
-  
-        <div class="container-sign-up">
-           <div class="sign-up-title">
-            <a href="../html/join.html"><img src="../assets/img/arrow-left.svg" class="arrow-left-sign-up"></a>
-              <h1>Sign up</h1>
-              <img src="../assets/img/vector-log-in.svg" alt=""/>
-           </div>
-  
-           <section class="input-box-sign-up">
-                <div class="input-log-in">
-                    <input id="addContactName" class="input-field" type="text" placeholder="Name" required/>
-                    <img class="input-icon" src="../assets//img/person-form-icon.svg" alt=""/>
-                </div>
+      <div class="join-img">
+        <img src="../assets/img/login.svg" />
+      </div>
 
-              <div class="input-log-in">
-                 <input class="input-field" id="emailInput" type="email" name="email" placeholder="Email" required/>
-                 <img src="../assets/img/mail-form-icon.svg" alt=""/>
-              </div>
-  
-              <div class="input-log-in">
-                 <input class="input-field" id="passwordInput" type="password" placeholder="Password">
-                 <img src="../assets/img/password-log-in.svg" onclick="togglePasswordVisibility()"  class="img-password" alt="" id="togglePassword">
-              </div>
-
-              <div class="input-log-in">
-                <input class="input-field" id="confirmPasswordInput" type="password" placeholder="Confirm Password">
-                <img src="../assets/img/password-log-in.svg" onclick="toggleConfirmPasswordVisibility()" class="img-password" alt="" id="toggleConfirmPassword">
-             </div>
-
-              <div id="generalError" class="error-message-sign-up"></div>
-           </section>
-
-           <section class="remember-forgot-box">
-                <div class="remember-me-sign-up">
-                    <input type="checkbox" name="remember-me" id="rememberMe" class="remember-me-input">
-                    <label for="remember-me">
-                        <h5>I accept the <a href="../html/privacy-policy.html">Privacy Policy</a></h5>
-                    </label>
-                </div>
-            </section>
-
-            <div class="end-sign-up">
-                <button class="btn-sign-up" id="signUpBtn" onclick="handleSignUp()">Sign up</button>
-            </div>
-        </div>
-        <div class="success-message d-none" id="successMessage">
-            <h2>You Signed Up successfully</h2>
+      <div class="container-sign-up">
+        <div class="sign-up-title">
+          <a href="../html/join.html"
+            ><img src="../assets/img/arrow-left.svg" class="arrow-left-sign-up"
+          /></a>
+          <h1>Sign up</h1>
+          <img src="../assets/img/vector-log-in.svg" alt="" />
         </div>
 
-        <div class="footer">
-            <a href="privacy-policy.html"><p>Privacy Policy</p></a>
-            <a href="legal-notice.html"><p>Legal notice</p></a>
+        <section class="input-box-sign-up">
+          <div class="input-log-in">
+            <input
+              id="addContactName"
+              class="input-field"
+              type="text"
+              placeholder="Name"
+              required
+            />
+            <img
+              class="input-icon"
+              src="../assets//img/person-form-icon.svg"
+              alt=""
+            />
+          </div>
+
+          <div class="input-log-in">
+            <input
+              class="input-field"
+              id="emailInput"
+              type="email"
+              name="email"
+              placeholder="Email"
+              required
+            />
+            <img src="../assets/img/mail-form-icon.svg" alt="" />
+          </div>
+
+          <div class="input-log-in">
+            <input
+              class="input-field"
+              id="passwordInput"
+              type="password"
+              placeholder="Password"
+            />
+            <img
+              src="../assets/img/password-log-in.svg"
+              onclick="togglePasswordVisibility()"
+              class="img-password"
+              alt=""
+              id="togglePassword"
+            />
+          </div>
+
+          <div class="input-log-in">
+            <input
+              class="input-field"
+              id="confirmPasswordInput"
+              type="password"
+              placeholder="Confirm Password"
+            />
+            <img
+              src="../assets/img/password-log-in.svg"
+              onclick="toggleConfirmPasswordVisibility()"
+              class="img-password"
+              alt=""
+              id="toggleConfirmPassword"
+            />
+          </div>
+
+          <div id="generalError" class="error-message-sign-up"></div>
+        </section>
+
+        <section class="remember-forgot-box">
+          <div class="remember-me-sign-up">
+            <input
+              type="checkbox"
+              name="remember-me"
+              id="rememberMe"
+              class="remember-me-input"
+            />
+            <label for="remember-me">
+              <h5>
+                I accept the
+                <a href="../html/privacy-policy.html">Privacy Policy</a>
+              </h5>
+            </label>
+          </div>
+        </section>
+
+        <div class="end-sign-up">
+          <button class="btn-sign-up" id="signUpBtn" onclick="handleSignUp()">
+            Sign up
+          </button>
         </div>
+      </div>
+      <div class="success-message d-none" id="successMessage">
+        <h2>You Signed Up successfully</h2>
+      </div>
+
+      <div class="footer">
+        <p onclick="loadInfoSites('privacy-policy.html')">Privacy Policy</p>
+        <p onclick="loadInfoSites('legal-notice.html')">Legal notice</p>
+      </div>
     </main>
-</body>
+  </body>
 </html>
