--- a/html/help.html
+++ b/html/help.html
@@ -19,7 +19,7 @@
         <main class="main help-main">
           <div class="title">
             <h1>Help</h1>
-            <button><img src="../assets/img/arrow-left.svg" alt="" /></button>
+            <button onclick="history.back()"><img src="../assets/img/arrow-left.svg" alt="" /></button>
           </div>
 
           <div class="help-text">
