--- a/html/legal-notice.html
+++ b/html/legal-notice.html
@@ -23,7 +23,7 @@
         <main class="main legals-padding">
           <div class="legals-header">
             <h1>Legal Notice</h1>
-            <button class="legals-return-button"><img src="../assets/img/arrow-left.svg" alt="" /></button>
+            <button onclick="history.back()" class="legals-return-button"><img src="../assets/img/arrow-left.svg" alt="" /></button>
           </div>
           <h2>Imprint</h2>
           <li>Tobias K., Milica P., Maxim B.</li>
