--- a/html/help.html
+++ b/html/help.html
@@ -19,7 +19,9 @@
         <main class="main help-main">
           <div class="title">
             <h1>Help</h1>
-            <button><img src="../assets/img/arrow-left.svg" alt="" /></button>
+            <a href="../html/summary.html">
+              <button><img src="../assets/img/arrow-left.svg" alt="" /></button>
+            </a>
           </div>
 
           <div class="help-text">
