--- a/html/join.html
+++ b/html/join.html
@@ -12,8 +12,11 @@
     <title>Join | Log in</title>
  </head>
  <body>
-   <main class="log-in-main">
+         <div class="join-page" id="joinPage">
+            <img src="../assets/img/login.svg" class="join-logo-move" id="joinLogo">
+         </div>
 
+   <main class="log-in-main" id="loginPage">
       <div class="header-log-in">
          <h2>Not a Join user?</h2>
          <a href="../html/sign-up.html"><button class="btn-log-in">Sign up</button></a>
