--- a/html/join.html
+++ b/html/join.html
@@ -8,6 +8,10 @@
     <script src="../js/sign-up.js" defer></script>
     <script src="../js/summary.js" defer></script>
     <script src="../script.js" defer></script>
+    <script type="module">
+      import { testDatabaseAccess } from '../js/firebase.js';
+      testDatabaseAccess();
+    </script>
     <link rel="stylesheet" href="../styles/log-in.css">
     <title>Join | Log in</title>
  </head>
