--- a/html/contacts.html
+++ b/html/contacts.html
@@ -16,6 +16,10 @@
     <script src="../script.js"></script>
     <script src="../js/contacts.js"></script>
     <script src="../js/render.js"></script>
+    <script type="module">
+      import { loadDataFromLocalStorage } from '../js/firebase.js';
+      loadDataFromLocalStorage();
+    </script>
   </head>
  <body onload='initContacts("contacts", "menu")'>
     <div id="overlay-placeholder"></div>
