--- a/html/summary.html
+++ b/html/summary.html
@@ -14,8 +14,7 @@
     <script src="../js/log-in.js" defer></script>
     <script src="../../js/render.js"></script>
     <script type="module">
-      import { login, loadDataFromLocalStorage } from '../js/firebase.js';
-      login(true);
+      import { loadDataFromLocalStorage } from '../js/firebase.js';
       loadDataFromLocalStorage();
     </script>
   </head>
