--- a/html/join.html
+++ b/html/join.html
@@ -17,7 +17,9 @@
 
       // Event Listener für den Button
       document.addEventListener("DOMContentLoaded", () => {
-        const guestLoginButton = document.querySelector("#guest-button");
+        console.log("content loaded");
+        
+        const guestLoginButton = document.querySelector("#guestLoginButton");
         guestLoginButton.addEventListener("click", () => {
           login(true); // Gast-Login aufrufen
         });
@@ -100,7 +102,7 @@
           <button class="button-log-in" id="loginButton" onclick="logIn()">
             Log in
           </button>
-          <button class="guest-button" id="guestButton">Guest Log in</button>
+          <button class="guest-button" id="guestLoginButton">Guest Log in</button>
         </section>
       </div>
 
