--- a/html/login-temp.html
+++ b/html/login-temp.html
@@ -11,6 +11,8 @@
 
       // Event Listener für den Button
       document.addEventListener("DOMContentLoaded", () => {
+        console.log("content loaded");
+        
         const guestLoginButton = document.querySelector("#guestLoginButton");
         guestLoginButton.addEventListener("click", () => {
           login(true); // Gast-Login aufrufen
