--- a/html/join.html
+++ b/html/join.html
@@ -14,6 +14,7 @@
  <body>
          <div class="join-page" id="joinPage">
             <img src="../assets/img/login.svg" class="join-logo-move" id="joinLogo">
+            <img src="../assets/img/join-logo.svg" class="join-move-mobile" style="display: none;">
          </div>
 
    <main class="log-in-main" id="loginPage">
