--- a/html/join.html
+++ b/html/join.html
@@ -13,30 +13,13 @@
     <script src="../js/summary.js" defer></script>
     <script src="../script.js" defer></script>
     <link rel="stylesheet" href="../styles/log-in.css">
-    <title>Join | Log in</title>
- </head>
- <body>
-         <div class="join-page" id="joinPage">
-            <img src="../assets/img/login.svg" class="join-logo-move" id="joinLogo">
-            <img src="../assets/img/join-logo.svg" class="join-move-mobile" style="display: none;">
-         </div>
-
-      // Event Listener für den Button
-      document.addEventListener("DOMContentLoaded", () => {
-        console.log("content loaded");
-        
-        const guestLoginButton = document.querySelector("#guestLoginButton");
-        guestLoginButton.addEventListener("click", () => {
-          login(true); // Gast-Login aufrufen
-        });
-      });
-    </script>
-    <link rel="stylesheet" href="../styles/log-in.css" />
-    <title>Join | Log in</title>
-  </head>
-  <body>
+    <title>Join | Log in</title> 
+    </head> 
+  <body>       
+  
     <div class="join-page" id="joinPage">
-      <img src="../assets/img/login.svg" class="join-logo-move" id="joinLogo" />
+      <img src="../assets/img/login.svg" class="join-logo-move" id="joinLogo">
+      <img src="../assets/img/join-logo.svg" class="join-move-mobile">
     </div>
 
     <main class="log-in-main" id="loginPage">
