--- a/html/board.html
+++ b/html/board.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="../styles/edit-task.css">
     <link rel="stylesheet" href="../styles/add-task.css">
     <link rel="stylesheet" href="../styles/contact.css">
+    <link rel="stylesheet" href="../styles/media.css">
 
     <script src="../script.js"></script>
     <script src="../js/board.js"></script>
@@ -32,9 +33,9 @@
     <div id="overlay-placeholder" class="overlay-placeholder d-none"></div> 
     </div>
     <div class="container">
-      <aside>
+      <div>
         <div id="menu-content" class="menu-content"></div>
-      </aside>
+      </div>
       <div class="main-content">
         <header id="header-content" class="header"></header>
         <main class="main board-padding">
