--- a/html/summary.html
+++ b/html/summary.html
@@ -7,6 +7,7 @@
     <title>Join | Summary</title>
     <link rel="stylesheet" href="../../style.css" />
     <link rel="stylesheet" href="../../styles/summery.css" />
+    <link rel="stylesheet" href="../styles/media.css">
     <script src="../script.js" defer>
     </script>
     <script src="../js/sign-up.js" defer></script>
@@ -20,9 +21,9 @@
   </head>
   <body onload='loadSummary("summary", "menu")'>
     <div class="container">
-      <aside>         
+      <div>         
         <div id="menu-content" class="menu-content"></div>
-      </aside>
+      </div>
       <div class="main-content">
         <header id="header-content" class="header"></header>
         <main class="main main-summary">
