--- a/html/add-task.html
+++ b/html/add-task.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../style.css" />
     <link rel="stylesheet" href="../styles/add-task.css" />
     <link rel="stylesheet" href="../styles/contact.css" />
+    <link rel="stylesheet" href="../styles/media.css">
     <script src="../js/contacts.js"></script>
     <script src="../js/add-task.js"></script>
     <script src="../script.js"></script>
@@ -26,9 +27,9 @@
   </head>
   <body onload='initAddTask("addTask", "menu")' class="body-add-task">
     <div class="container">
-      <aside>
+      <div>
         <div id="menu-content" class="menu-content"></div>
-      </aside>
+      </div>
       <div class="main-content">
         <header id="header-content" class="header"></header>
         <main id="main-add-task" class="main main-add-task">
