--- a/html/contacts.html
+++ b/html/contacts.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../styles/dialog.css">
     <link rel="stylesheet" href="../style.css" />
     <link rel="stylesheet" href="../styles/contact.css">
+    <link rel="stylesheet" href="../styles/media.css">
     <script src="../script.js"></script>
     <script src="../js/contacts.js"></script>
     <script src="../js/render.js"></script>
@@ -24,9 +25,9 @@
  <body onload='initContacts("contacts", "menu")'>
     <div id="overlay-placeholder"></div>
     <div class="container">
-      <aside>
+      <div>
         <div id="menu-content" class="menu-content"></div>
-      </aside>
+      </div>
       <div class="main-content">
         <header id="header-content" class="header"></header>
         <main class="main contact-main">
