--- a/html/join.html
+++ b/html/join.html
@@ -12,6 +12,17 @@
     <script src="../js/sign-up.js" defer></script>
     <script src="../js/summary.js" defer></script>
     <script src="../script.js" defer></script>
+    <script type="module">
+      import { login } from "../js/firebase.js";
+
+      // Event Listener für den Button
+      document.addEventListener("DOMContentLoaded", () => {        
+        const guestLoginButton = document.querySelector("#guestLoginButton");
+        guestLoginButton.addEventListener("click", () => {
+          login(true); // Gast-Login aufrufen
+        });
+      });
+    </script>
     <link rel="stylesheet" href="../styles/log-in.css">
     <title>Join | Log in</title> 
     </head> 
