--- a/html/add-task.html
+++ b/html/add-task.html
@@ -19,7 +19,7 @@
     <script src="../js/add-task.js"></script>
     <script src="../script.js"></script>
     <script src="../js/render.js"></script>
-    <script src="../js/board.js"></script>
+    <!-- <script src="../js/board.js"></script> -->
     <script type="module">
       import { loadDataFromLocalStorage } from '../js/firebase.js';
       loadDataFromLocalStorage();
