--- a/html/sign-up.html
+++ b/html/sign-up.html
@@ -16,8 +16,8 @@
     <title>Join | Sign up</title>
   </head>
   <body>
-    <main class="log-in-main">
-      <div class="join-img">
+    <main class="main-signup">
+      <div class="join-img-signup">
         <img src="../assets/img/login.svg" />
       </div>
 
@@ -31,7 +31,7 @@
         </div>
 
         <section class="input-box-sign-up">
-          <div class="input-log-in">
+          <div class="input-sign-up">
             <input
               id="addContactName"
               class="input-field"
@@ -46,7 +46,7 @@
             />
           </div>
 
-          <div class="input-log-in">
+          <div class="input-sign-up">
             <input
               class="input-field"
               id="emailInput"
@@ -58,7 +58,7 @@
             <img src="../assets/img/mail-form-icon.svg" alt="" />
           </div>
 
-          <div class="input-log-in">
+          <div class="input-sign-up">
             <input
               class="input-field"
               id="passwordInput"
@@ -74,7 +74,7 @@
             />
           </div>
 
-          <div class="input-log-in">
+          <div class="input-sign-up">
             <input
               class="input-field"
               id="confirmPasswordInput"
@@ -93,7 +93,7 @@
           <div id="generalError" class="error-message-sign-up"></div>
         </section>
 
-        <section class="remember-forgot-box">
+        <section class="remember-forgot-box-signup">
           <div class="remember-me-sign-up">
             <input
               type="checkbox"
