--- a/html/summary.html
+++ b/html/summary.html
@@ -29,8 +29,9 @@
         <main class="main main-summary">
           <div class="title-summary">
             <h1>Join 360</h1>
-            <img src="../assets/img/Vector-summery.svg" />
+            <img src="../assets/img/Vector-summery.svg" class="title-vector"/>
             <p>Key Metrics at a Glance</p>
+            <img src="../assets/img/vector-log-in.svg" class="mobile-vector">
           </div>
 
           <div class="summary-list">
