implemented index html

--- a/html/help.html
+++ b/html/help.html
@@ -9,7 +9,7 @@
     <script src="../script.js"></script>
     <script src="../../js/render.js"></script>
   </head>
-  <body onload='init()'>
+  <body onload='loadTemplates()'>
     <div class="container help-container">
       <aside>
         <div id="menu-content" class="menu-content"></div>
