--- a/html/sign-up.html
+++ b/html/sign-up.html
@@ -23,7 +23,7 @@
 
       <div class="container-sign-up">
         <div class="sign-up-title">
-          <a href="../html/join.html"
+          <a onclick="history.back()"
             ><img src="../assets/img/arrow-left.svg" class="arrow-left-sign-up"
           /></a>
           <h1>Sign up</h1>
