--- a/html/privacy-policy.html
+++ b/html/privacy-policy.html
@@ -15,7 +15,7 @@
     <script src="../script.js"></script>
     <script src="../../js/render.js"></script>
   </head>
-  <body onload='init("privacyPolicy", "legals")'>
+  <body onload='loadTemplates("privacyPolicy", "legals")'>
     <div class="container">
       <aside>
         <div id="menu-content" class="menu-content"></div>
