bugfix on prio task

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -23,7 +23,7 @@
     </script>
   </head>
  <body onload='initContacts("contacts", "menu")'>
-    <div id="overlay-placeholder"></div>
+    <div id="overlay-placeholder" onclick="closeDialog()"></div>
     <div class="container">
       <div>
         <div id="menu-content" class="menu-content"></div>
